--- a/build.properties
+++ b/build.properties
@@ -3,4 +3,5 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               icons/
+               icons/,\
+               META-INF/lib/gherkin-2.9.3.jar
