fixed broken jar.. it was missing a runtime reference for junit

--- a/build.properties
+++ b/build.properties
@@ -4,4 +4,5 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
-               META-INF/lib/gherkin-2.9.3.jar
+               META-INF/lib/gherkin-2.9.3.jar,\
+               META-INF/lib/junit-4.10.jar
